style/contacts_responsive.css
@media (max-width: 1400px) {

    dialog:open {
        left: 5%;
    }

    .slogan-and-card-container {
        padding: 0;
        width: 100%;
    }

    .slogan {
        padding: 10px;
    }

    .img-and-form {
        margin-left: 0;
        padding: 0;
    }
    
    form {
        width: 300px;
    }

    .input-group input {
        height: 48px;
        border-radius: 10px;
        border: 1px solid var(--color-text-secondary);
        /* padding: 0 60px 0 140px; */
        font-size: 16px;
        width: 300px;
        padding-left:10px;
}
}

@media (max-width: 1250px) {
    .contact-list-style {
        width: 250px;
    }

    .slogan h2 {
        font-size: 32px;
    }
    .contact-header{
        gap: 5px;
    }

    #contact-card.show {
        padding: 10px;
    }

    .contact-name {
        font-size: 26px;
    }
}

@media (max-width: 910px) {


    .slogan {
        padding: 0;
    }

    .contact-name {
        font-size: 22px;
    }

    #contact-card.show {
        padding: 0;
    }
}

/* Tablet/Mobile Adjustments (Max Width: 850px) */
@media(max-width: 850px) {
    
    /* Layout Adjustments */
    .main-content {
        height: calc(100dvh - 96px - 80px);
        width: 100%;
        position: relative;
        margin-left: 0;
        box-sizing: border-box;
    }

    /* Add Contact Button */
    .add-contact-btn {
        position: absolute;
        width: 56px;
        height: 56px;
        opacity: 1;
        gap: 10px;
        border-radius: 46px;
        border-width: 1px;
        padding: 12px;
        top: 80%;
        right: 10%;
    }

    .add-contact-btn span {
        display: none;
    }

    /* Contact List */
    .contact-list-style{
        position: absolute;
        left: 0;
        width: 100%;
        height: calc(100dvh - 180px);
        box-sizing: border-box;
    }

    ul {
        display: flex;
        gap: 12px;
        cursor: unset;
        box-sizing: border-box;
    }

    #contact-list-content {
        width: 100%;
        position: relative;
        left: 0;
        padding-left: 0;
        box-sizing: border-box;
    }

    .contact-row {
        width: 100%;
        box-sizing: border-box;
    }

    .contact-row span {
        word-break: break-all;
        white-space: normal;
    }

    /* Contact Card & Slogan */
    .slogan-and-card-container {
        display: none;
        position: absolute;
        left: 0;
        height: calc(100dvh - 180px);
        width: 100%;
        padding: 30px 15px;
        box-sizing: border-box;
        overflow-y: auto;

    }

    .main-content.show-contact-card .contact-list-style {
        display: none;
    }

    .main-content.show-contact-card .slogan-and-card-container {
        display: flex;
    }

    #contact-card {
        padding: 0;
    }

    #contact-card.show {
    width: 100%;
}

    .btn-and-name-container {
        display: flex;
        flex-direction: column;
    }

    .content-slogan {
        display: flex;
        flex-direction: column;
        max-width: 432px;
        box-sizing: border-box;
    }

    .contact-item {
        display: flex;
        justify-content: flex-start;
        align-items: flex-start;
    }

    

    /* Mobile Action Buttons */
    #close-card-btn {
        display: flex;
        position: absolute;
        cursor: pointer;
        width: 32px;
        height: 32px;
        top: 0;
        right: 5%;
    }

    .mobile-edit-container {
        position: fixed;
        display: flex;
        justify-content: center;
        align-items: center;
        cursor: pointer;
        background-color: var(--color-primary);
        border-radius: 56%;
        height: 50px;
        width: 50px;
        top: 100%;
        right: 8%;
        z-index: 1000;
    }

    /* Mobile Menu */
    .mobile-edit-menu {
        position: absolute;
        display: flex;
        cursor: pointer;
        color: var(--color-white);
        height: 20px;
        width: 5px;

    }

    .mobile-menu {
        position: fixed;
        display: flex;
        flex-direction: column;
        cursor: pointer;
        top: 100%;
        right: 10%;
        background-color: white;
        width: 116px;
        height: 100px;
        opacity: 1;
        border-top-left-radius: 20px;
        border-top-right-radius: 20px;
        border-bottom-left-radius: 20px;
        padding: 10px;
    }

    .mobile-menu button {
        border: none;
        background-color: white;
    }

    .mobile-menu button:hover {
        background-color: transparent;
    }

    /* Dialog Modal */
    dialog:open {
        position: relative;
        width: 100%;
        max-width: 396px;
        min-height: 760px;
        top: 10%;
        left: 5%;
        display: flex;
        flex-direction: column;
        box-sizing: border-box;
    }

    dialog h3 {
        font-family: Inter;
        font-weight: 700;
        font-style: Bold;
        font-size: 47px;
        line-height: 120%;
        letter-spacing: 0%;
    }

    dialog span {
        font-family: Inter;
        font-weight: 400;
        font-style: Regular;
        font-size: 20px;
        line-height: 120%;
        letter-spacing: 0%;
    }

    .check-btn:hover {
        background-color: var(--color-primary);
    }

    .delete-btn-modal:hover {
        background-color: var(--color-white);
        border: none;
        color: var(--color-primary);
    }

    .close-btn {
        color: var(--color-white);
        right: 25px;
        top: 25px;
    }

    .close-btn:hover {
        color: var(--color-primary);
    }

    .left-side-modal  {
        justify-content: center;
        align-items: flex-start;
        height: 50%;

    }

    .right-side-modal {
        justify-content: center;
        align-items: flex-start;;
        height: fit-content;
    }

    .img-and-form {
        height: fit-content;
        display: flex;
        justify-content: center;
        align-items: center;
        flex-direction: column;
        margin-left: 0;
        width: 100%;
        
    }

    .contact-name {
    font-family: 'Inter', sans-serif;
    font-weight: 500;
    font-size: 21px;
    line-height: 120%;
    color: #000000;
    white-space: nowrap;
}

    .mobile-menu {
        position: fixed;
    }

    /* Modal Profile & Initials */
    .profile-img {
        position: absolute;
        top: 38%;
    }

    .contact-initials {
        position: relative;
        top: 20;
    }

    .contact-initials-edit {
        position: absolute;
        top: 44%;
    }

    form {
        padding-top: 70px;
        padding-bottom: 30px;
        width: 100%;
    }

     .input-group input {
        max-width: 320px;
    }

    .btn-container {
        display: flex;
        justify-content: center;
        align-items: center;
    }

    .logo-white {
        display: none;
    }

    .check-icon {
        position: absolute;
        margin-left: 21%;
        margin-top: 4%;
    }

    .clear-btn {
        display: none;
    }

    .delete-btn {
        display: none;
    }

    .contact {
        display: flex;
    }

    .slogan {
        display: none;
    }

    .edit-and-delete-btn-container {
        display: none;
    }
}




/* Small Mobile Adjustments (Max Width: 550px) */
@media (max-width: 600px) {
    dialog:open {
        height: 90%;
        left: 0;
    }

    .slogan-and-card-container {
        padding: 5px;
    }

    .left-side-modal  {
        justify-content: center;
        align-items: flex-start;
        justify-content: center;
        height: 50%;
        width: 100%;
        
    }

    .img-and-form {
        padding: 0;
    }

    .contact-header {
        gap: 0;
        max-width: 420px;
    }

    .contact-initials {
        position: relative;
        top: 0;
        width: 100px;
        height: 100px;
    }

    .contact-initials-edit {
        position: absolute;
        top: 43%;
    }

    .check-icon {
        margin-left: 24%;
    }

    .profile-img {
            top: 38%;
    }
}

@media (max-height: 1080px) {
    @media (max-width: 850px) {
        dialog:open {
            max-height: 40%;
        }

        .profile-img {
            top: 32%;
        }

        .contact-initials-edit {
            top: 38%;
        }

        .mobile-edit-container {
            top: 70%;
        }

    }

    @media (max-width: 500px) {

        .profile-img {
            top: 33%;
        }

        .contact-initials-edit {
            top: 30%;
        }

        .mobile-menu {
            top: 70%;
        }
    }
}

